objects/Building__c.object
<CustomObject>
    <fields>
        <fullName>Connection_Type__c</fullName>
        <label>Connection Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Breaker</fullName>
                </value>
                <value>
                    <fullName>Tap Dropdown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Electrical_BUS_Rating__c</fullName>
        <label>Electrical BUS Rating</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Electrical_Main_Rating__c</fullName>
        <label>Electrical Main Rating</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Electricity_Type__c</fullName>
        <label>Electricity Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Orientation__c</fullName>
        <label>Orientation</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <label>Project</label>
        <referenceTo>SFDC_Project__c</referenceTo>
        <relationshipLabel>Buildings</relationshipLabel>
        <relationshipName>Buildings</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Racking_Tilt__c</fullName>
        <label>Racking Tilt</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Roof_Height__c</fullName>
        <label>Roof Height</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Roof_Pitch__c</fullName>
        <label>Roof Pitch</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Building</label>
    <nameField>
        <label>Building Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Buildings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>